--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -24,7 +24,7 @@
     "bikeMilesSet = list(zip(bikeMiles.values,bikeMiles.index))\n",
     "miles_df = pd.DataFrame(data = bikeMilesSet, columns=['Miles','Days'])\n",
     "miles_df.to_csv('MilesPerDays',index=False)\n",
-    "Location = r'C:\\users\\Eugen\\MilesPerDays'\n",
+    "Location = r'C:\\users\\Artem\\MilesPerDays'\n",
     "df = pd.read_csv(Location, index_col='Days')\n",
     "df\n",
     "os.remove(Location)\n",
